--- a/src/pages/_Layout.astro
+++ b/src/pages/_Layout.astro
@@ -1,5 +1,6 @@
 ---
-import "@/styles/globals.css"
+import '@/styles/globals.css'
+import { Font } from 'astro:assets'
 ---
 
 <!doctype html>
@@ -7,20 +8,25 @@ import "@/styles/globals.css"
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="/vercel.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Sample Title</title>
+		<meta name="description" content="Sample description" />
+		<meta name="keywords" content="" />
+		<Font cssVariable="--font-dm-sans" preload />
+		<script>
+			import { PUBLIC_POSTHOG_KEY } from 'astro:env/client'
+			import posthog from 'posthog-js'
+
+			posthog.init(PUBLIC_POSTHOG_KEY, {
+				api_host: '/api/analytics',
+				ui_host: 'https://us.posthog.com',
+				defaults: '2025-05-24',
+				person_profiles: 'always',
+			})
+		</script>
 	</head>
-	<body>
+	<body class="bg-background m-0 h-full w-full antialiased">
 		<slot />
 	</body>
 </html>
-
-<style>
-	html,
-	body {
-		margin: 0;
-		width: 100%;
-		height: 100%;
-	}
-</style>
