--- a/src/pages/_Layout.astro
+++ b/src/pages/_Layout.astro
@@ -4,7 +4,7 @@ import { Font } from 'astro:assets'
 ---
 
 <!doctype html>
-<html lang="en">
+<html lang="en" class="m-0 h-full w-full">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
